# crew-python-game-builder

./: LICENSE  README.md  article.md  carrom_game_log.txt  pyproject.toml
output/: README.md
output/breakout_game/: code_review.md  final_evaluation.md  generated_game.py
output/carrom_board_game/: architecture_design.md  audio_design_specs.md  code_review.md  final_evaluation.md  generated_game.py  ui_design_specs.md
output/gilli_danda/: code_review.md  final_evaluation.md  generated_game.py
output/kabaddi_game/: architecture_design.md  audio_design_specs.md  code_review.md  final_evaluation.md  generated_game.py  ui_design_specs.md
output/pac-man_clone/: code_review.md  final_evaluation.md  generated_game.py
output/pithu_(seven_stones)/: code_review.md  final_evaluation.md  generated_game.py
output/pong_game/: architecture_design.md  audio_design_specs.md  code_review.md  final_evaluation.md  generated_game.py  ui_design_specs.md
output/simple_tetris/: code_review.md  final_evaluation.md  generated_game.py
output/snake_game/: code_review.md  final_evaluation.md  generated_game.py
output/snakes_and_ladders/: code_review.md  final_evaluation.md  generated_game.py
src/crew_python_game_builder/: crew.py  main.py
src/crew_python_game_builder/config/: agents.yaml  gamedesign.yaml  system_config.yaml  tasks.yaml
src/crew_python_game_builder/tools/: custom_tool.py
