[project]
name = "crew_python_game_builder"
version = "0.1.0"
description = "crew_python_game_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
crew_python_game_builder = "crew_python_game_builder.main:run"
run_crew = "crew_python_game_builder.main:run"
train = "crew_python_game_builder.main:train"
replay = "crew_python_game_builder.main:replay"
test = "crew_python_game_builder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
